--- a/WebContent/adduser.html
+++ b/WebContent/adduser.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <hr>
-<form name="p" action="/Test2/GreetUser" method="post">
+<form name="p" action="/Test2/UserDetails" method="post">
 <table>
 <tbody>
 <tr>
