--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -2,10 +2,12 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>Anil SOLUTIONS INC</title>
 </head>
 <body>
-Welcome to Test2 !
-<a href="/Test2/userform.html"> enter name </a>
+ <h1 style="color='green'">Welcome...!!!!</h1>
+<a href="/Test2/UserDetails"> Click to register</a><br>
+<a href="/Test2/updateuser.html">  Click to update </a><br>
+<a href="/Test2/DeleteUserDetails">  Click to delete </a>
 </body>
 </html>
